--- a/MarketingCompanyWebApplication/src/main/webapp/WEB-INF/classes/index.html
+++ b/MarketingCompanyWebApplication/src/main/webapp/WEB-INF/classes/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+<app-root>Loading...</app-root>
+
 <h1>Test!</h1>
 <div class="container"></div>
 <div id="home" class="flex-center flex-column"> </div>
